syntax = "proto3";
option csharp_namespace = "UserService";

service GrpcUser{
    rpc GetAllUsers (GetAllRequest) returns (UserResponse);
}
message GetAllRequest {}

message GrpcUserModel {
    int32 userId = 1;
    string Name = 2;
    int32 RankInSystem = 3;
    int32 NumberOfDogs  = 4;
}

message UserResponse {
    repeated GrpcUserModel user = 1;
}
